--- a/build.gradle
+++ b/build.gradle
@@ -31,11 +31,9 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'mysql:mysql-connector-java'
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
+    testCompile('org.springframework.security:spring-security-test:5.3.1.RELEASE')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testCompile('junit:junit:4.12')
 }
 
-test {
-    useJUnitPlatform()
-}
+
