--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/${TRAVEL_DATABASE_NAME}?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
 spring.datasource.username=${TRAVEL_DATABASE_USER}
