--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,8 @@ dependencies {
     compile('io.springfox:springfox-swagger-ui:2.7.0')
 
     runtimeOnly 'com.h2database:h2'
-//    runtimeOnly 'mysql:mysql-connector-java'
-    compile('org.postgresql:postgresql:9.4.1212')
+    runtimeOnly 'mysql:mysql-connector-java'
+//    compile('org.postgresql:postgresql:9.4.1212')
 
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     compile group: 'org.hibernate', name: 'hibernate-validator', version: '6.1.5.Final'
