--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,21 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=postgresql
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.database=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/${TRAVEL_DATABASE_NAME}?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
+spring.datasource.username=${TRAVEL_DATABASE_USER}
+spring.datasource.password=${TRAVEL_DATABASE_PASSWORD}
+
 hibernate.temp.use_jdbc_metadata_defaults=false
 coctail.api.endpoint.prod=https://www.thecocktaildb.com/api/json/v1/1/random.php
 nbp.api.endpoint.prod=http://api.nbp.pl/api/exchangerates/rates/a/
 weather.api.endpoint.prod=https://www.metaweather.com/api/location/
 
+#spring.jpa.database=postgresql
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 
 
 
 
 
-
-#spring.jpa.database=mysql
-#spring.datasource.url=jdbc:mysql://localhost:3306/${TRAVEL_DATABASE_NAME}?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
-#spring.datasource.username=${TRAVEL_DATABASE_USER}
-#spring.datasource.password=${TRAVEL_DATABASE_PASSWORD}
